UF-7471: Handle attachments from e-service and provide them in the API
